# slicepy

./: README.md  pyproject.toml  todo.md
slicepy/: main.py
